deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka-server
spec:
  selector:
    matchLabels:
      app: eureka-server
  replicas: 1
  template:
    metadata:
      labels:
        app: eureka-server
    spec:
      containers:
      - name: eureka-server
        image: docker.io/hazemfelhi/eureka-server:v2 #docker.io/moohamedd/angular-app:v1 
        ports:
        - containerPort: 9102
