deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: coffee-shop-service
spec:
  selector:
    app: coffee-shop
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    nodePort: 3100
  selector:
    app: ingress-nginx
type: NodePort
