deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservice-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: microservice.eureka.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: eureka-server-service
                port:
                  number: 8761
